kubernetes/echo-app.yaml
apiVersion: apps/v1
apiVersion: v1
kind: Service
metadata:
  name: echo-app-service
  labels:
    app: echo-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: echo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-app
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
      - name: echo-app
        image: mmaeda/k8s-echo-app:v1
        ports:
        - containerPort: 8080
